--- a/say_hello.html
+++ b/say_hello.html
@@ -4,28 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Say Hello</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>CSS Basic</title>
+    <link rel="stylesheet" href="assets/css/basic.css">
+    <style>
+        h1 {
+            color: red;
+            background-color: yellow;
+            font-size: 20px;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="container">
-        <h1>Say Hello</h1>
-        <hr>
-        <div class="mb-2">
-            <label for="guest-name" class="form-label">訪客名稱</label>
-            <input type="text" class="form-control" placeholder="輸入名稱" id="guest-name">
-        </div>
-        <div class="mb-2 text-end">
-            <button class="btn btn-primary" id="say-btn">打招呼</button>
-        </div>
+    <h1>Hello World</h1>
+    <h1 style="background-color:blue">Custom Style</h1>
+    <h2 style="color: #2bdb42;">This is h2</h2>
 
-        <div class="alert alert-success d-none" id="response">
-            Hi! XXX
-        </div>
+    <div class="cube-wrap">
+        <span class="cube">1</span>
+        <span class="cube">2</span>
+        <span class="cube">3</span>
+        <span class="cube">4</span>
+        <span class="cube">5</span>
+    </div>
+
+
+    <div class="f-100">100px</div>
+    <div class="fp-100">100%</div>
+    <div class="fem-100">1em</div>
+
+    <div class="f-100">
+        <div class="fem-100">100%</div>
+        <div class="frem-100">100%</div>
     </div>
 </body>
-<script src="assets/js/say_hello.js"></script>
 
 </html>
